[gd_scene load_steps=4 format=3 uid="uid://bqdr7rjl2gjhk"]

[ext_resource type="PackedScene" uid="uid://dp42vxv3jwphf" path="res://scenes/Road.tscn" id="1"]
[ext_resource type="Theme" uid="uid://c0jeqeuie4r85" path="res://assets/Theme.tres" id="2"]
[ext_resource type="Script" path="res://scripts/game_over.gd" id="3"]

[node name="GameOver" type="Node2D"]
script = ExtResource("3")

[node name="Road" parent="." instance=ExtResource("1")]

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("2")

[node name="PlayAgain" type="Button" parent="UI"]
layout_mode = 0
offset_left = 233.0
offset_top = 677.0
offset_right = 369.0
offset_bottom = 770.0
grow_horizontal = 2
grow_vertical = 2
text = "Play Again?"

[node name="EnemyTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[connection signal="pressed" from="UI/PlayAgain" to="." method="_on_play_again_btn_pressed"]
[connection signal="timeout" from="EnemyTimer" to="." method="_on_EnemyTimer_timeout"]
